# python

./: README.md
AVLTree/: avltree.py  test_avltree.py
BST/: bst.py  test_bst.py
Deque/: deque.py
HashTable/: hashtable.py
Heap/: heap.py
Queues/: queue.py
Sorting/: bubbleSort.py
Stacks/: infixToPostfix.py  parenChecker.py
Trees/: nestedlisttree.py  parse_tree.py
UnorderedList/: unorderedList.py
algorithms/: README.md
algorithms/Applications of Data Structures/HashTable/: check_sudoku.py  longest_substring.py  sudoku_solver.py  (+2 more)
data-structures/: README.md
data-structures/AVLTree/: avltree.py  test_avltree.py
data-structures/HashTable/: maps.py
data-structures/Heap/: heap.py
data-structures/Queues/: queue.py
data-structures/Stacks/: stack.py
data-structures/Trees/: linktree.py
foundations/: README.md  classes.py  debugging.py  documentation.py  exceptions.py  functional_programming.py  io.py  iterators.py  oop_design.py  recursion.py  testing.py  variables.py
leetcode/: pyproject.toml
leetcode/solutions/: 0023_merge_k_sorted_lists.py  0053_max_subarray.py  0118_pascal_triangle_1.py  0148_sort_linked_list.py
ml/jupyter-setup/: hello-jupyter.ipynb
ml/scikit-regression/: regression.ipynb
projects/: booleanAPI.py
projects/DailyDataAPI/: README.md  attendance.py  course.py  db.py  events.py  information.py  natarea.py  oyd_daily.db  print_table.py  refreshdb.py  refreshuserdb.py  region.py  school.py  student.py  test.db  user.py
projects/Games/: tictactoe.py
projects/parse_eventzilla/: attendees.csv  main.py  pyproject.toml
(+31 files in other folders)
